# TDM-NET-TrueShape

./: .env.example  .gitignore  00_data_preparation.qmd  01_node_classification.qmd  02_create_link.qmd  03_transfer_attributes.qmd  README.md  index.qmd  pyproject.toml
.claude/: settings.json
_data/: TrueShape Diagnosis.qgz
_freeze/01_node_classification/execute-results/: html.json
_freeze/02_create_link/execute-results/: html.json
_freeze/03_transfer_attributes/execute-results/: html.json
_src/: arcgis_utils.py  link_utils.py  node_utils.py
docs/: 01_node_classification.html  02_create_link.html  03_transfer_attributes.html  index.html  robots.txt  search.json  sitemap.xml
