[project]
name = "tdm-net-trueshape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # --- PRODUCTION DEPENDENCIES ---
  "annotated-types==0.6.0",
  "anyio==4.12.1",
  "arcgis==2.4.2",
  "argon2-cffi==25.1.0",
  "argon2-cffi-bindings==25.1.0",
  "arrow==1.4.0",
  "asttokens==3.0.1",
  "async-lru==2.1.0",
  "attrs==25.4.0",
  "babel==2.18.0",
  "backports-zstd==1.3.0",
  "beautifulsoup4==4.14.3",
  "bleach==6.3.0",
  "blinker==1.9.0",
  "branca==0.8.2",
  "brotli==1.2.0",
  "cached-property==1.5.2",
  "cachetools==7.0.1",
  "certifi==2026.2.25",
  "cffi==2.0.0",
  "charset-normalizer==3.4.4",
  "click==8.3.1",
  "click-plugins==1.1.1.2",
  "cligj==0.7.2",
  "cloudpickle==3.1.2",
  "colorama==0.4.6",
  "comm==0.2.3",
  "contourpy==1.3.3",
  "cryptography==42.0.5",
  "cycler==0.12.1",
  "cytoolz==1.1.0",
  "dask==2025.2.0",
  "decorator==5.2.1",
  "defusedxml==0.7.1",
  "distributed==2025.2.0",
  "exceptiongroup==1.3.1",
  "executing==2.2.1",
  "fastjsonschema==2.21.2",
  "fiona==1.10.1",
  "folium==0.20.0",
  "fonttools==4.61.1",
  "fqdn==1.5.1",
  "fsspec==2026.2.0",
  "geomet==1.0.0",
  "geopandas==1.1.2",
  "greenlet==3.3.1",
  "gssapi==1.9.0",
  "gtfs-kit==12.0.2",
  "h2==4.3.0",
  "h11==0.16.0",
  "hpack==4.1.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "hyperframe==6.1.0",
  "idna==3.11",
  "importlib-metadata==8.7.0",
  "importlib-resources==6.5.2",
  "isoduration==20.11.0",
  "jedi==0.19.2",
  "jinja2==3.1.6",
  "joblib==1.5.3",
  "json2html==1.3.0",
  "json5==0.13.0",
  "jsonpointer==3.0.0",
  "jsonschema==4.26.0",
  "jsonschema-specifications==2025.9.1",
  "keyring==24.3.0",
  "kiwisolver==1.4.9",
  "lark==1.3.1",
  "locket==1.0.0",
  "lxml==6.0.2",
  "lz4==4.4.5",
  "mapclassify==2.10.0",
  "markupsafe==3.0.3",
  "matplotlib==3.10.8",
  "matplotlib-inline==0.2.1",
  "mistune==3.2.0",
  "msgpack==1.1.2",
  "munkres==1.1.4",
  "nest-asyncio==1.6.0",
  "networkx==3.6.1",
  "numpy==2.4.2",
  "oauthlib==3.2.2",
  "overrides==7.7.0",
  "packaging==26.0",
  "pandas==2.3.3",
  "pandocfilters==1.5.0",
  "parso==0.8.6",
  "partd==1.4.2",
  "pillow==12.1.1",
  "pip==26.0.1",
  "platformdirs==4.9.2",
  "prometheus-client==0.24.1",
  "prompt-toolkit==3.0.52",
  "psutil==7.2.2",
  "pure-eval==0.2.3",
  "puremagic==1.15",
  "pyarrow==20.0.0",
  "pycparser==2.22",
  "pydantic==2.11.7",
  "pydantic-core==2.33.2",
  "pygments==2.19.2",
  "pyjwt==2.4.0",
  "pylerc==4.0",
  "pyogrio==0.12.1",
  "pyparsing==3.3.2",
  "pyproj==3.7.2",
  "pyside6==6.10.2",
  "pysocks==1.7.1",
  "pyspnego==0.11.2",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.2.2",
  "python-json-logger==2.0.7",
  "pytz==2025.1",
  "pywin32==311",
  "pywin32-ctypes==0.2.0",
  "pywinpty==2.0.15",
  "pyyaml==6.0.3",
  "pyzmq==27.1.0",
  "referencing==0.37.0",
  "requests==2.32.5",
  "requests-gssapi==1.3.0",
  "requests-kerberos==0.14.0",
  "requests-oauthlib==2.0.0",
  "requests-toolbelt==1.0.0",
  "rfc3339-validator==0.1.4",
  "rfc3986-validator==0.1.1",
  "rfc3987-syntax==1.1.0",
  "rpds-py==0.30.0",
  "rtree==1.4.1",
  "ruamel-yaml==0.19.1",
  "ruamel-yaml-clib==0.2.15",
  "scikit-learn==1.8.0",
  "scipy==1.17.0",
  "send2trash==2.1.0",
  "setuptools==82.0.0",
  "shapely==2.1.2",
  "shiboken6==6.10.2",
  "six==1.17.0",
  "sniffio==1.3.1",
  "sortedcontainers==2.4.0",
  "soupsieve==2.8.3",
  "sqlalchemy==2.0.46",
  "sspilib==0.3.1",
  "stack-data==0.6.3",
  "tabulate==0.9.0",
  "tblib==3.2.2",
  "terminado==0.18.1",
  "threadpoolctl==3.6.0",
  "tinycss2==1.4.0",
  "tomli==2.4.0",
  "toolz==1.1.0",
  "tornado==6.5.4",
  "traitlets==5.14.3",
  "truststore==0.10.0",
  "typing-extensions==4.15.0",
  "typing-inspection==0.4.2",
  "typing-utils==0.1.0",
  "tzdata==2025.3",
  "ujson==5.11.0",
  "unicodedata2==17.0.1",
  "uri-template==1.3.0",
  "urllib3==2.6.3",
  "wcwidth==0.6.0",
  "webcolors==25.10.0",
  "webencodings==0.5.1",
  "websocket-client==1.9.0",
  "wheel==0.46.3",
  "win-inet-pton==1.1.0",
  "winkerberos==0.9.1",
  "xyzservices==2025.11.0",
  "zict==3.0.0",
  "zipp==3.23.0"
]

[dependency-groups]
dev = [
  # --- JUPYTER / NOTEBOOK ECOSYSTEM ---
  "debugpy==1.8.20",
  "ipykernel==7.2.0",
  "ipython==9.10.0",
  "ipython-pygments-lexers==1.1.1",
  "ipywidgets==8.1.8",
  "jupyter==1.1.1",
  "jupyter-cache==1.0.1",
  "jupyter-client==8.8.0",
  "jupyter-console==6.6.3",
  "jupyter-core==5.9.1",
  "jupyter-events==0.12.0",
  "jupyter-lsp==2.3.0",
  "jupyter-server==2.17.0",
  "jupyter-server-terminals==0.5.4",
  "jupyterlab==4.5.4",
  "jupyterlab-pygments==0.3.0",
  "jupyterlab-server==2.28.0",
  "jupyterlab-widgets==3.0.16",
  "nbclient==0.10.4",
  "nbconvert==7.17.0",
  "nbformat==5.10.4",
  "notebook==7.5.3",
  "notebook-shim==0.2.4",
  # --- DEV TOOLING ---
  "pyrefly",
  "ruff",
  "widgetsnbextension==4.0.15",
]

# ─────────────────────────────────────────────────────────────────────────────
# RUFF LINTER & FORMATTER CONFIGURATION
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
extend-select = [
  "E",
  "W",
  "C90",
  "I",
  "N",
  "D",
  "UP",
  "YTT",
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "LOG",
  "G",
  "INP",
  "PIE",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TC",
  "INT",
  "ARG",
  "PTH",
  "TD",
  "FIX",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  "NPY",
  "PERF",
  "FURB",
  "RUF"
]
ignore = [
  "E501",
  "D1",
  "D203",
  "D212",
  "D401",
  "FBT003",
  "S311",
  "PERF401",
  "RET504",
  "FA102",
  "TC002",
  "TC003",
  "TRY003",
  "EM101",
  "N803",
  "N806",
  "PLR0913"
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
  "S101",
  "S105",
  "S106",
  "S107",
  "PLR2004",
  "SLF001",
  "D",
  "ANN",
  "ARG001",
  "PLC0415",
  "EM102"
]
"*_test.py" = [
  "S101",
  "S105",
  "S106",
  "S107",
  "PLR2004",
  "SLF001",
  "D",
  "ANN",
  "ARG001",
  "PLC0415",
  "EM102"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true
docstring-code-line-length = 80
